[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game/Common/Menus/EndLevel/end_level_ui.gd" type="Script" id=1]
[ext_resource path="res://Misc/Fonts/Oswald/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.482353, 0.482353, 0.482353, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 4.0
anti_aliasing_size = 0.75

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.47451, 0.937255, 0.741176, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 4.0
anti_aliasing_size = 0.75

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.678431, 0.992157, 0.635294, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 4.0
anti_aliasing_size = 0.75

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 4.0
anti_aliasing_size = 0.75

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.47451, 0.937255, 0.741176, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 4.0
anti_aliasing_size = 0.75

[sub_resource type="DynamicFont" id=4]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.784314 )

[sub_resource type="DynamicFont" id=3]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 3 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.482353, 0.482353, 0.482353, 1 )
Button/colors/font_color_focus = Color( 0.47451, 0.937255, 0.741176, 1 )
Button/colors/font_color_hover = Color( 0.678431, 0.992157, 0.635294, 1 )
Button/colors/font_color_pressed = Color( 0.47451, 0.937255, 0.741176, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = SubResource( 5 )
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )
HBoxContainer/constants/separation = 30
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0.929412, 1, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 4
Label/constants/shadow_offset_y = 3
Label/fonts/font = SubResource( 4 )
Label/styles/normal = null
Panel/styles/panel = SubResource( 1 )
VBoxContainer/constants/separation = 45

[node name="EndLevelUI" type="CanvasLayer"]
pause_mode = 2
layer = 4
script = ExtResource( 1 )

[node name="OpacityTween" type="Tween" parent="."]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
margin_left = 251.0
margin_top = 217.0
margin_right = 772.0
margin_bottom = 383.0

[node name="Time" type="Label" parent="UI/CenterContainer/VBoxContainer"]
margin_right = 521.0
margin_bottom = 75.0
text = "99:99:999"
align = 1

[node name="Buttons" type="HBoxContainer" parent="UI/CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 521.0
margin_bottom = 166.0
rect_min_size = Vector2( 500, 0 )
alignment = 1

[node name="MainMenuButton" type="Button" parent="UI/CenterContainer/VBoxContainer/Buttons"]
margin_right = 171.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "menu_main_menu"

[node name="RestartButton" type="Button" parent="UI/CenterContainer/VBoxContainer/Buttons"]
margin_left = 201.0
margin_right = 331.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "menu_restart"

[node name="NextButton" type="Button" parent="UI/CenterContainer/VBoxContainer/Buttons"]
margin_left = 361.0
margin_right = 521.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "menu_next_level"

[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Buttons/MainMenuButton" to="." method="_unpause"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Buttons/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Buttons/RestartButton" to="." method="_unpause"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Buttons/NextButton" to="." method="_unpause"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Buttons/NextButton" to="." method="_on_NextButton_pressed"]
